# fastapi-msal

./: README.md  pyproject.toml
fastapi_msal/endpoints/: msal_auth_router.py
fastapi_msal/middleware/: auth_wsgi.py  exceptions.py  msal_auth_backend.py
